Rename class prefixes from .kui to .eui

--- a/docs/src/components/guide_demo/_guide_demo.scss
+++ b/docs/src/components/guide_demo/_guide_demo.scss
@@ -4,20 +4,20 @@
   }
 }
 .guideDemo__highlightSpacer {
-  .kuiSpacer {
+  .euiSpacer {
     background: transparentize(#0096CC, .9);
   }
 }
 
 .guideDemo__highlightGrid {
-  .kuiFlexItem {
+  .euiFlexItem {
     background: transparentize(#0096CC, .9);
     padding: 16px;
   }
 }
 
 .guideDemo__highlightGridWrap {
-  .kuiFlexItem div {
+  .euiFlexItem div {
     background: transparentize(#0096CC, .9);
     padding: 16px;
   }
