--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -1,9 +1,9 @@
-.kuiForm__error {
+.euiForm__error {
   @include kuiFontSizeS;
   list-style: disc;
   margin-left: $euiSizeXL;
 }
 
-.kuiForm__errors {
+.euiForm__errors {
   margin-bottom: $euiSize;
 }
