--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -1,21 +1,21 @@
-.kuiFormControlLayout {
+.euiFormControlLayout {
   @include kuiFormControlSize;
 
   display: inline-block;
   position: relative;
 
-  &.kuiFormControlLayout--fullWidth {
+  &.euiFormControlLayout--fullWidth {
     width: 100%;
     max-width: 100%;
   }
 
-  .kuiFormControlLayout__icon {
+  .euiFormControlLayout__icon {
     position: absolute;
     top: $euiSizeM;
     left: $euiSizeM;
   }
 
-  .kuiFormControlLayout__icon--right {
+  .euiFormControlLayout__icon--right {
     left: auto;
     right: $euiSizeM;
   }
