--- a/src/components/form/select/_select.scss
+++ b/src/components/form/select/_select.scss
@@ -1,7 +1,7 @@
 /**
  * 1. Leave room for caret.
  */
-.kuiSelect {
+.euiSelect {
   @include kuiFormControlStyle;
 
   padding-right: $euiSizeXXL; /* 1 */
