--- a/src/components/header/_header_popover.scss
+++ b/src/components/header/_header_popover.scss
@@ -2,7 +2,7 @@
  * 1. Override KeyPadMenu.
  * 2. Override popover default.
  */
-.kuiHeaderPopover {
+.euiHeaderPopover {
   top: calc(100% - #{$euiSizeS}) !important; /* 1 */
   border-radius: $euiBorderRadius 0 $euiBorderRadius $euiBorderRadius !important; /* 2 */
 }
