--- a/src/components/header/header_section/_header_section.scss
+++ b/src/components/header/header_section/_header_section.scss
@@ -1,11 +1,11 @@
-.kuiHeaderSection {
+.euiHeaderSection {
   display: flex;
 }
 
-.kuiHeaderSection--left {
+.euiHeaderSection--left {
   flex-grow: 1;
 }
 
-.kuiHeaderSection--right {
+.euiHeaderSection--right {
   flex-shrink: 1;
 }
