--- a/src/components/page/page_content/_page_content_header.scss
+++ b/src/components/page/page_content/_page_content_header.scss
@@ -1,4 +1,4 @@
-.kuiPageContentHeader {
+.euiPageContentHeader {
   margin-bottom: $euiSizeL;
   display: flex;
   flex-direction: row;
@@ -7,7 +7,7 @@
 }
 
 @include screenXSmall {
-  .kuiPageContentHeader {
+  .euiPageContentHeader {
     flex-direction: column;
   }
 }
