--- a/src/components/page/page_side_bar/_page_side_bar.scss
+++ b/src/components/page/page_side_bar/_page_side_bar.scss
@@ -1,10 +1,10 @@
-.kuiPageSideBar {
+.euiPageSideBar {
   width: $euiSize * 12;
   margin-right: $euiSizeL;
 }
 
 @include screenXSmall {
-  .kuiPageSideBar {
+  .euiPageSideBar {
     width: 100%;
   }
 }
