--- a/src/components/spacer/_spacer.scss
+++ b/src/components/spacer/_spacer.scss
@@ -8,7 +8,7 @@ $spacerSizes: (
 );
 
 @each $name, $size in $spacerSizes {
-  .kuiSpacer--#{$name} {
+  .euiSpacer--#{$name} {
     height: $size;
   }
 }
