--- a/src/components/form/checkbox/_checkbox_group.scss
+++ b/src/components/form/checkbox/_checkbox_group.scss
@@ -1,3 +1,3 @@
-.kuiCheckboxGroup__item + .kuiCheckboxGroup__item {
+.euiCheckboxGroup__item + .euiCheckboxGroup__item {
   margin-top: $euiSizeS;
 }
