--- a/src/components/form/form_row/_form_row.scss
+++ b/src/components/form/form_row/_form_row.scss
@@ -2,7 +2,7 @@
  * 1. Coerce inline form elements to behave as block-level elements.
  * 2. For inline forms, we need to add padding if the label doesn't exist.
  */
-.kuiFormRow {
+.euiFormRow {
   display: flex; /* 1 */
   flex-direction: column; /* 1 */
   max-width: $euiFormMaxWidth;
@@ -11,15 +11,15 @@
     margin-top: $euiSizeL;
   }
 
-  &.kuiFormRow--fullWidth {
+  &.euiFormRow--fullWidth {
     max-width: 100%;
   }
 
-  &.kuiFormRow--hasEmptyLabelSpace {
+  &.euiFormRow--hasEmptyLabelSpace {
     padding-top: $euiFontSizeXS + $euiSizeS; /* 2 */
   }
 
-  .kuiFormRow__text + .kuiFormRow__text {
+  .euiFormRow__text + .euiFormRow__text {
     padding-top: 0;
   }
 }
