--- a/src/components/header/header_alert/_header_alert.scss
+++ b/src/components/header/header_alert/_header_alert.scss
@@ -1,4 +1,4 @@
-.kuiHeaderAlert {
+.euiHeaderAlert {
   text-align: left;
   min-width: 300px;
   position: relative;
@@ -6,7 +6,7 @@
   padding: $euiSize;
   border-top: $euiBorderThin;
 
-  .kuiHeaderAlert__dismiss {
+  .euiHeaderAlert__dismiss {
     opacity: 0;
     position: absolute;
     right: $euiSize;
@@ -17,23 +17,23 @@
     width: auto;
   }
 
-  &:hover .kuiHeaderAlert__dismiss,
-  .kuiHeaderAlert__dismiss:focus {
+  &:hover .euiHeaderAlert__dismiss,
+  .euiHeaderAlert__dismiss:focus {
     opacity: 1;
   }
 
-  .kuiHeaderAlert__title {
+  .euiHeaderAlert__title {
     font-weight: $euiFontWeightMedium;
     @include kuiFontSizeM;
     padding-right: $euiSizeL; // Accounts for the dismiss button.
   }
 
-  .kuiHeaderAlert__text {
+  .euiHeaderAlert__text {
     @include kuiFontSizeXS;
     margin-bottom: $euiSizeS;
   }
 
-  .kuiHeaderAlert__action {
+  .euiHeaderAlert__action {
     @include kuiFontSizeXS;
     color: $euiLinkColor;
 
@@ -42,7 +42,7 @@
     }
   }
 
-  .kuiHeaderAlert__date {
+  .euiHeaderAlert__date {
     @include kuiFontSizeXS;
     color: $euiColorDarkShade;
   }
