--- a/src/components/page/page_content/_page_content.scss
+++ b/src/components/page/page_content/_page_content.scss
@@ -1,18 +1,18 @@
-.kuiPageContent {
+.euiPageContent {
   width: 100%;
 }
 
-.kuiPageContent--verticalCenter {
+.euiPageContent--verticalCenter {
   align-self: center;
 }
 
-.kuiPageContent--horizontalCenter {
+.euiPageContent--horizontalCenter {
   width: auto;
   margin: auto;
 }
 
 @include screenXSmall {
-  .kuiPageContent {
+  .euiPageContent {
     border-radius: 0;
     border: none;
   }
