--- a/src/components/table/_index.scss
+++ b/src/components/table/_index.scss
@@ -13,7 +13,7 @@ $euiTableCellPaddingCompressed: $euiSizeS;
   width: $euiSizeL + $euiTableCellPadding;
   vertical-align: middle;
 
-  .kuiTableCellContent {
+  .euiTableCellContent {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
