--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -2,7 +2,7 @@
  * NOTE: table-layout: fixed causes a bug in IE11 and Edge (see #9929). It also prevents us from
  * specifying a column width, e.g. the checkbox column.
  */
-.kuiTable {
+.euiTable {
   @include kuiFontSizeS;
 
   width: 100%;
@@ -11,31 +11,31 @@
   background-color: $euiColorEmptyShade;
 }
 
-.kuiTable--compressed {
-  .kuiTableCellContent {
+.euiTable--compressed {
+  .euiTableCellContent {
     padding: $euiTableCellPaddingCompressed;
   }
 
-  .kuiTableHeaderButton:focus {
+  .euiTableHeaderButton:focus {
     outline: solid $euiTableCellPaddingCompressed $euiFocusBackgroundColor;
   }
 }
 
-.kuiTableHeaderCell {
+.euiTableHeaderCell {
   @include kuiTableCell;
 
   color: $euiTitleColor;
 
-  .kuiTableHeaderButton {
+  .euiTableHeaderButton {
     text-align: left;
   }
 }
 
-.kuiTableHeaderCellCheckbox {
+.euiTableHeaderCellCheckbox {
   @include kuiTableCellCheckbox;
 }
 
-.kuiTableHeaderButton {
+.euiTableHeaderButton {
   @include kuiFontSizeS;
 
   color: inherit;
@@ -45,7 +45,7 @@
     text-decoration: underline;
     color: $euiColorPrimary;
 
-    .kuiTableSortIcon {
+    .euiTableSortIcon {
       display: block;
       fill: $euiColorPrimary;
     }
@@ -56,27 +56,27 @@
   }
 }
 
-.kuiTableSortIcon {
+.euiTableSortIcon {
   margin-left: $euiSizeXS;
   fill: tintOrShade($euiTitleColor, 80%, 70%);
 
-  .kuiTableHeaderButton-isSorted & {
+  .euiTableHeaderButton-isSorted & {
     fill: $euiTitleColor;
   }
 }
 
-.kuiTableRow {
+.euiTableRow {
   transition: background-color $euiAnimSpeedFast $euiAnimSlightResistance;
   &:hover {
     background-color: tintOrShade($euiColorLightestShade, 50%, 20%);
   }
 
-  &.kuiTableRow-isSelected {
+  &.euiTableRow-isSelected {
     background-color: transparentize($euiColorPrimary, .95);
   }
 }
 
-.kuiTableRowCell {
+.euiTableRowCell {
   @include kuiTableCell;
 
   color: $euiTextColor;
@@ -84,7 +84,7 @@
   border-bottom: $euiBorderThin;
 }
 
-.kuiTableRowCellCheckbox {
+.euiTableRowCellCheckbox {
   @include kuiTableCellCheckbox;
 
   border-top: $euiBorderThin;
@@ -96,7 +96,7 @@
  * 2. Truncate text with an ellipsis. The padding on this div allows the ellipsis to show. If
  *    the padding was on the cell, the ellipsis would be cropped.
  */
-.kuiTableCellContent {
+.euiTableCellContent {
   display: flex;
   align-items: center;
   white-space: nowrap; /* 2 */
@@ -105,16 +105,16 @@
   padding: $euiTableCellPadding; /* 2 */
 }
 
-  .kuiTableCellContent__text {
+  .euiTableCellContent__text {
     overflow: hidden;
     min-width: 0;
     text-overflow: ellipsis;
   }
 
-.kuiTableCellContent--alignRight {
+.euiTableCellContent--alignRight {
   justify-content: flex-end;
 }
 
-.kuiTableCellContent--wrapText {
+.euiTableCellContent--wrapText {
   white-space: normal;
 }
