--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -1,4 +1,4 @@
-.kuiToast {
+.euiToast {
   @include kuiBottomShadow;
 
   position: relative;
@@ -7,8 +7,8 @@
   border: $euiBorderThin;
   width: 100%;
 
-  &:hover .kuiToast__closeButton,
-  &:focus .kuiToast__closeButton, {
+  &:hover .euiToast__closeButton,
+  &:focus .euiToast__closeButton, {
     opacity: 1;
   }
 }
@@ -16,7 +16,7 @@
   /**
    * 1. Fit button to icon.
    */
-  .kuiToast__closeButton {
+  .euiToast__closeButton {
     position: absolute;
     top: $euiSize;
     right: $euiSize;
@@ -55,7 +55,7 @@ $toastTypes: (
 
 // Create button modifiders based upon the map.
 @each $name, $color in $toastTypes {
-  .kuiToast--#{$name} {
+  .euiToast--#{$name} {
     border-top: 2px solid $color;
   }
 }
@@ -65,7 +65,7 @@ $toastTypes: (
  * 2. Apply margin to all but last item in the flex.
  * 3. Account for close button.
  */
-.kuiToastHeader {
+.euiToastHeader {
   @include kuiFontSizeM;
   padding-right: $euiSizeL; /* 3 */
 
@@ -80,17 +80,17 @@ $toastTypes: (
   /**
    * 1. Vertically center icon with first line of title.
    */
-  .kuiToastHeader__icon {
+  .euiToastHeader__icon {
     flex: 0 0 auto;
     fill: $euiTitleColor;
     transform: translateY(2px); /* 1 */
   }
 
-  .kuiToastHeader__title {
+  .euiToastHeader__title {
     color: $euiTitleColor;
     font-weight: $euiFontWeightLight;
   }
 
-.kuiToastHeader--withBody {
+.euiToastHeader--withBody {
   margin-bottom: $euiSizeM;
 }
